# AI_Skribenten

./: article_parser.py  main.py
ai_skribenten.egg-info/: PKG-INFO  requires.txt
backend/: main.py  mainnoo.py  pyproject.toml
backend/ai_skribenten.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/artificial_intelligence/: gpt_4o.py
backend/model/: article_model.py  prompt_model.py  site_model.py  user_model.py
backend/router/: article_router.py  category_router.py  prompt_router.py  site_router.py  user_router.py
backend/router/admin/: admin_router.py
backend/service/: article_service.py  category_service.py  prompt_service.py  site_service.py  user_service.py
backend/service/admin/: admin_service.py
backend/service/article_service/: article_service.py  validate_article.py  write_article.py
backend/service/database/: connect.py  create.py
backend/shutterstock/: main.py
backend/shutterstock/router/: auth_router.py
backend_old/: pyproject.toml
backend_old/ai_skribenten.egg-info/: SOURCES.txt  top_level.txt
backend_old/medier/victoria/: victoria.json
frontend/: package-lock.json  package.json
medier/: __init__.py
old/old_frontend/src/: app.html
old/old_frontend/src/routes/: +layout.svelte
