[project]
name = "ai_skribenten"
version = "0.1.0"
description = "AI-powered content generator"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "python-dotenv>=1.1.0",
    "openai==1.72.0",
    "beautifulsoup4>=4.13.4",
    "PyMySQL>=1.1.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2"
]